--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=api-gateway
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone: http://discovery-server:8761/eureka/
+spring.main.web-application-type=reactive
+server.port: 8761
 
 spring.cloud.gateway.routes[0].id=user-service
 spring.cloud.gateway.routes[0].uri=lb://user-service
