--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=discovery-server
+eureka.instance.hostname=discovery-server
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+server.address=0.0.0.0
+server.port=8761
