--- a/.github/workflows/backend-develop-cicd.yaml
+++ b/.github/workflows/backend-develop-cicd.yaml
@@ -35,8 +35,8 @@ jobs:
       # Build and deploy discovery-server
       - name: Build and deploy discovery-server Docker image
         run: |
-          docker buildx build --platform linux/amd64 -t kgalvan/discovery-server -f ./discovery-server/Dockerfile .
           cd ../discovery-server
+          docker buildx build --platform linux/amd64 -t kgalvan/discovery-server -f ./Dockerfile .
           eb init --platform docker --region ${{ secrets.AWS_REGION }}
           eb use discovery-server-dev  
           eb deploy
@@ -44,8 +44,8 @@ jobs:
       # Build and deploy api-gateway
       - name: Build and deploy api-gateway Docker image
         run: |
-          docker buildx build --platform linux/amd64 -t kgalvan/api-gateway -f ./api-gateway/Dockerfile .
           cd ../api-gateway
+          docker buildx build --platform linux/amd64 -t kgalvan/api-gateway -f ./Dockerfile .
           eb init --platform docker --region ${{ secrets.AWS_REGION }}
           eb use api-gateway-dev  
           eb deploy
@@ -53,8 +53,8 @@ jobs:
       # Build and deploy user-service
       - name: Build and deploy user-service Docker image
         run: |
-          docker buildx build --platform linux/amd64 -t kgalvan/user-service -f ./user-service/Dockerfile .
           cd ./user-service
+          docker buildx build --platform linux/amd64 -t kgalvan/user-service -f ./Dockerfile .
           eb init --platform docker --region ${{ secrets.AWS_REGION }}
           eb use user-service-dev  
           eb deploy
@@ -62,8 +62,8 @@ jobs:
       # Build and deploy game-service
       - name: Build and deploy game-service Docker image
         run: |
-          docker buildx build --platform linux/amd64 -t kgalvan/game-service -f ./game-service/Dockerfile .
           cd ../game-service
+          docker buildx build --platform linux/amd64 -t kgalvan/game-service -f ./Dockerfile .
           eb init --platform docker --region ${{ secrets.AWS_REGION }}
           eb use game-service-dev  
           eb deploy
@@ -71,8 +71,8 @@ jobs:
       # Build and deploy review-service
       - name: Build and deploy review-service Docker image
         run: |
-          docker buildx build --platform linux/amd64 -t kgalvan/review-service -f ./review-service/Dockerfile .
           cd ../review-service
+          docker buildx build --platform linux/amd64 -t kgalvan/review-service -f ./Dockerfile .
           eb init --platform docker --region ${{ secrets.AWS_REGION }}
           eb use review-service-dev  
           eb deploy
