Moved cd to before docker build

--- a/.github/workflows/backend-develop-cicd.yaml
+++ b/.github/workflows/backend-develop-cicd.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: Build and deploy discovery-server Docker image
         run: |
           cd discovery-server
-          docker buildx build --platform linux/amd64 -t kgalvan/discovery-server -f ./Dockerfile .
+          docker buildx build --platform linux/amd64 -t kgalvan/discovery-server -f ./Dockerfile --push .
           eb init --platform docker --region ${{ secrets.AWS_REGION }}
           eb use discovery-server-dev  
           eb deploy
@@ -45,7 +45,7 @@ jobs:
       - name: Build and deploy api-gateway Docker image
         run: |
           cd ../api-gateway
-          docker buildx build --platform linux/amd64 -t kgalvan/api-gateway -f ./Dockerfile .
+          docker buildx build --platform linux/amd64 -t kgalvan/api-gateway -f ./Dockerfile --push .
           eb init --platform docker --region ${{ secrets.AWS_REGION }}
           eb use api-gateway-dev  
           eb deploy
@@ -54,7 +54,7 @@ jobs:
       - name: Build and deploy user-service Docker image
         run: |
           cd ../user-service
-          docker buildx build --platform linux/amd64 -t kgalvan/user-service -f ./Dockerfile .
+          docker buildx build --platform linux/amd64 -t kgalvan/user-service -f ./Dockerfile --push .
           eb init --platform docker --region ${{ secrets.AWS_REGION }}
           eb use user-service-dev  
           eb deploy
@@ -63,7 +63,7 @@ jobs:
       - name: Build and deploy game-service Docker image
         run: |
           cd ../game-service
-          docker buildx build --platform linux/amd64 -t kgalvan/game-service -f ./Dockerfile .
+          docker buildx build --platform linux/amd64 -t kgalvan/game-service -f ./Dockerfile --push .
           eb init --platform docker --region ${{ secrets.AWS_REGION }}
           eb use game-service-dev  
           eb deploy
@@ -72,7 +72,7 @@ jobs:
       - name: Build and deploy review-service Docker image
         run: |
           cd ../review-service
-          docker buildx build --platform linux/amd64 -t kgalvan/review-service -f ./Dockerfile .
+          docker buildx build --platform linux/amd64 -t kgalvan/review-service -f ./Dockerfile --push .
           eb init --platform docker --region ${{ secrets.AWS_REGION }}
           eb use review-service-dev  
           eb deploy
