--- a/.github/workflows/backend-develop-cicd.yaml
+++ b/.github/workflows/backend-develop-cicd.yaml
@@ -39,7 +39,7 @@ jobs:
       - name: Build and deploy discovery-server Docker image
         run: |
           cd discovery-server
-          docker buildx build --platform linux/amd64 -t kgalvan/discovery-server -f ./Dockerfile .
+          docker buildx build --platform linux/amd64 -t kgalvan/discovery-server-dev -f ./Dockerfile .
           docker push kgalvan/discovery-server-dev
           eb init --platform docker --region ${{ secrets.AWS_REGION }}
           eb use discovery-server-dev  
@@ -49,7 +49,7 @@ jobs:
       - name: Build and deploy api-gateway Docker image
         run: |
           cd ../api-gateway
-          docker buildx build --platform linux/amd64 -t kgalvan/api-gateway -f ./Dockerfile .
+          docker buildx build --platform linux/amd64 -t kgalvan/api-gateway-dev -f ./Dockerfile .
           docker push kgalvan/api-gateway-dev
           eb init --platform docker --region ${{ secrets.AWS_REGION }}
           eb use api-gateway-dev  
@@ -59,7 +59,7 @@ jobs:
       - name: Build and deploy user-service Docker image
         run: |
           cd ../user-service
-          docker buildx build --platform linux/amd64 -t kgalvan/user-service -f ./Dockerfile .
+          docker buildx build --platform linux/amd64 -t kgalvan/user-service-dev -f ./Dockerfile .
           docker push kgalvan/user-service-dev
           eb init --platform docker --region ${{ secrets.AWS_REGION }}
           eb use user-service-dev  
@@ -69,7 +69,7 @@ jobs:
       - name: Build and deploy game-service Docker image
         run: |
           cd ../game-service
-          docker buildx build --platform linux/amd64 -t kgalvan/game-service -f ./Dockerfile .
+          docker buildx build --platform linux/amd64 -t kgalvan/game-service-dev -f ./Dockerfile .
           docker push kgalvan/game-service-dev
           eb init --platform docker --region ${{ secrets.AWS_REGION }}
           eb use game-service-dev  
@@ -79,7 +79,7 @@ jobs:
       - name: Build and deploy review-service Docker image
         run: |
           cd ../review-service
-          docker buildx build --platform linux/amd64 -t kgalvan/review-service -f ./Dockerfile .
+          docker buildx build --platform linux/amd64 -t kgalvan/review-service-dev -f ./Dockerfile .
           docker push kgalvan/review-service-dev
           eb init --platform docker --region ${{ secrets.AWS_REGION }}
           eb use review-service-dev  
