--- a/.github/workflows/backend-develop-cicd.yaml
+++ b/.github/workflows/backend-develop-cicd.yaml
@@ -39,8 +39,9 @@ jobs:
       - name: Build and deploy discovery-server Docker image
         run: |
           cd discovery-server
-          docker buildx build --platform linux/amd64 -t kgalvan/discovery-server-dev -f ./Dockerfile .
-          docker push kgalvan/discovery-server-dev
+          docker buildx build --platform linux/amd64 -t kgalvan/discovery-server:discovery-server-dev -f ./Dockerfile .
+          docker push kgalvan/discovery-server:discovery-server-dev
+          docker push kgalvan/discovery-server:latest
           eb init --platform docker --region ${{ secrets.AWS_REGION }}
           eb use discovery-server-dev  
           eb deploy
