Added test logging

--- a/.github/workflows/backend-develop-cicd.yaml
+++ b/.github/workflows/backend-develop-cicd.yaml
@@ -39,11 +39,11 @@ jobs:
       - name: Build and deploy discovery-server Docker image
         run: |
           cd discovery-server
-          docker buildx build --platform linux/amd64 -t kgalvan/discovery-server:discovery-server-dev -f ./Dockerfile .
-          docker push kgalvan/discovery-server:discovery-server-dev
-          docker push kgalvan/discovery-server:latest
+          docker buildx build --platform linux/amd64 -t kgalvan/discovery-server1:discovery-server-dev5 -f ./Dockerfile .
+          docker push kgalvan/discovery-server2:discovery-server-dev6
+          docker push kgalvan/discovery-server3:latest7
           eb init --platform docker --region ${{ secrets.AWS_REGION }}
-          eb use discovery-server-dev  
+          eb use discovery-server-dev4  
           eb deploy
 
       # Build and deploy api-gateway
