Attempt to fix tagging and repository name

--- a/.github/workflows/backend-develop-cicd.yaml
+++ b/.github/workflows/backend-develop-cicd.yaml
@@ -39,11 +39,10 @@ jobs:
       - name: Build and deploy discovery-server Docker image
         run: |
           cd discovery-server
-          docker buildx build --platform linux/amd64 -t kgalvan/discovery-server1:discovery-server-dev5 -f ./Dockerfile .
-          docker push kgalvan/discovery-server2:discovery-server-dev6
-          docker push kgalvan/discovery-server3:latest7
+          docker buildx build --platform linux/amd64 -t kgalvan/discovery-server-dev:discovery-server -f ./Dockerfile .
+          docker push kgalvan/discovery-server-dev:discovery-server
           eb init --platform docker --region ${{ secrets.AWS_REGION }}
-          eb use discovery-server-dev4  
+          eb use discovery-server-dev
           eb deploy
 
       # Build and deploy api-gateway
