--- a/.github/workflows/backend-develop-cicd.yaml
+++ b/.github/workflows/backend-develop-cicd.yaml
@@ -42,7 +42,7 @@ jobs:
           docker buildx build --platform linux/amd64 -t kgalvan/discovery-server-dev:discovery-server -f ./Dockerfile .
           docker push kgalvan/discovery-server-dev:discovery-server
           eb init --platform docker --region ${{ secrets.AWS_REGION }}
-          eb use discovery-server-dev
+          eb use kgalvan/discovery-server-dev:discovery-server
           eb deploy
 
       # Build and deploy api-gateway
