--- a/.github/workflows/backend-develop-cicd.yaml
+++ b/.github/workflows/backend-develop-cicd.yaml
@@ -39,8 +39,8 @@ jobs:
       - name: Build and deploy discovery-server Docker image
         run: |
           cd discovery-server
-          docker buildx build --platform linux/amd64 -t kgalvan/discovery-server-dev -f ./Dockerfile .
-          docker push kgalvan/discovery-server-dev
+          docker buildx build --platform linux/amd64 -t kgalvan:discovery-server-dev/discovery-server:latest -f ./Dockerfile .
+          docker push kgalvan:discovery-server-dev/discovery-server:latest
           eb init --platform docker --region ${{ secrets.AWS_REGION }}
           eb use kgalvan/discovery-server-dev
           eb deploy
