--- a/.github/workflows/backend-develop-cicd.yaml
+++ b/.github/workflows/backend-develop-cicd.yaml
@@ -39,7 +39,9 @@ jobs:
       - name: Build and deploy discovery-server Docker image
         run: |
           cd discovery-server
-          docker buildx build --platform linux/amd64 -t kgalvan:discovery-server-dev/discovery-server:latest -f ./Dockerfile .
+          docker buildx build --platform linux/amd64 -f ./Dockerfile .
+          docker images
+          docker tag kgalvan:discovery-server-dev/discovery-server:latest
           docker push kgalvan:discovery-server-dev/discovery-server:latest
           eb init --platform docker --region ${{ secrets.AWS_REGION }}
           eb use kgalvan/discovery-server-dev
