--- a/.github/workflows/backend-develop-cicd.yaml
+++ b/.github/workflows/backend-develop-cicd.yaml
@@ -39,9 +39,9 @@ jobs:
       - name: Build and deploy discovery-server Docker image
         run: |
           cd discovery-server
-          docker buildx build --platform linux/amd64 -f ./Dockerfile .
+          docker buildx build --platform linux/amd64 --tag kgalvan/discovery-server -f ./Dockerfile .
           docker images
-          docker tag kgalvan:discovery-server-dev/discovery-server:latest
+          docker tag kgalvan/discovery-server kgalvan/discovery-server:latest
           docker push kgalvan:discovery-server-dev/discovery-server:latest
           eb init --platform docker --region ${{ secrets.AWS_REGION }}
           eb use kgalvan/discovery-server-dev
