--- a/.github/workflows/backend-develop-cicd.yaml
+++ b/.github/workflows/backend-develop-cicd.yaml
@@ -41,7 +41,7 @@ jobs:
           cd discovery-server
           docker buildx build --platform linux/amd64 --tag kgalvan/discovery-server:latest -f ./Dockerfile . --load
           docker images
-          docker push kgalvan:discovery-server:latest
+          docker push kgalvan/discovery-server:latest
           eb init --platform docker --region ${{ secrets.AWS_REGION }}
           eb use kgalvan/discovery-server-dev
           eb deploy
