--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=api-gateway
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone: http://discovery-server:8761/eureka/
+eureka.client.service-url.defaultZone: http://<discovery-server-environment-url>:8761/eureka/
 spring.main.web-application-type=reactive
 server.port: 8081
 
