--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=api-gateway
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone: http://<discovery-server-environment-url>:8761/eureka/
+eureka.client.serviceUrl.defaultZone=${discovery-server-environment-url:http://discovery-server-dev.us-east-2.elasticbeanstalk.com}:8761/eureka
 spring.main.web-application-type=reactive
 server.port: 8081
 
@@ -16,3 +16,6 @@ spring.cloud.gateway.routes[1].predicates[0]=Path=/api/games/**
 spring.cloud.gateway.routes[2].id=review-service
 spring.cloud.gateway.routes[2].uri=lb://review-service
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/reviews/**
+
+
+
