Fixed discovery server url

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=api-gateway
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.serviceUrl.defaultZone=${DISCOVERY_SERVER_URL:http://discovery-server-dev.us-east-2.elasticbeanstalk.com}:8761/eureka
+eureka.client.serviceUrl.defaultZone=${DISCOVERY_SERVER_URL:http://discovery-server-dev.us-east-2.elasticbeanstalk.com}
 spring.main.web-application-type=reactive
 server.port: 8081
 
